# senate-simulator

./: .gitignore  Cargo.toml  README.md  streamlit_app.py  tracked_bills.json
app/: __init__.py  load.py  ui_helpers.py  views.py
data/public/: last_updated.json  summary.json  tracked_bills.json
examples/: legislative_context_example.json  legislative_object_example.json  senator_example.json
scripts/: daily_refresh.sh
src/: error.rs  lib.rs  main.rs  public_artifacts.rs
src/analysis/: chamber.rs  floor_action.rs  mod.rs  transition.rs
src/backtest/: runner.rs
src/derive/: feature_driven.rs  mod.rs  stance.rs
src/eval/: align.rs  examples.rs  mod.rs  runner.rs  timeline.rs
src/features/: domains.rs  materialize.rs  mod.rs  procedure.rs  senator.rs  votes.rs  windows.rs
src/ingest/: actions.rs  config.rs  congress_api.rs  gdelt.rs  legislation.rs  live.rs  mod.rs  normalize.rs  public_signals.rs  roster.rs  senate_votes.rs  snapshot.rs  sources.rs  votes.rs
src/io/: json.rs
src/model/: action_alignment.rs  actual_trajectory.rs  backtest_result.rs  data_snapshot.rs  dynamic_state.rs  evaluation_example.rs  floor_action_assessment.rs  historical_timeline.rs  identity.rs  issue_preferences.rs  legislative.rs  legislative_context.rs  mod.rs  next_event_prediction.rs  normalized_public_signal_record.rs  normalized_records.rs  procedural.rs  public_signal_summary.rs  raw_public_signal_record.rs  raw_records.rs  scenario.rs  senate_analysis.rs  senate_event.rs  senator.rs  senator_feature_record.rs  senator_stance.rs  (+5 more)
tests/: test_app_load.py
(+32 files in other folders)
